--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 </div>
                 <div class="pie-de-imagen">
                     <div class="iconos">
-                        <i class="fa-regular fa-heart fa-xl" style="color: #000000;"></i> 
-                        <i class="fa-regular fa-comment fa-xl" style="color: #000000;"></i>
-                        <i class="fa-regular fa-paper-plane fa-xl" style="color: #000000;"></i>
-                        <span><i class="fa-regular fa-bookmark fa-xl" style="color: #000000;"></i></span> 
+                        <i class="fa-regular fa-heart fa-xl"></i> 
+                        <i class="fa-regular fa-comment fa-xl"></i>
+                        <i class="fa-regular fa-paper-plane fa-xl"></i>
+                        <span><i class="fa-regular fa-bookmark fa-xl"></i></span> 
                     </div>
-                    <p>Like by <strong>4GeeksAcademy, html5, Web</strong> and <strong>100,000 others</strong> </p>
+                    <p>Like by <b>4GeeksAcademy, html5, Web</b> and <b>100,000 others</b></p>
                     <p>Instagram es una de las interfaces de usuarios más populares del mundo,
                       este es el primero de los tres ejercicios que te harán replicar las partes más importantes y difíciles de Instagram.com </p>
                 </div>
